--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -24,7 +24,7 @@ p{
   font-size: 22px;
 }
 
-h1{
+h1, .app__main-text{
   background-image: linear-gradient(0deg,rgba(195, 141, 34, 1) 0%, rgba(170, 45, 253, 1) 100%);
   background-clip: text;
   color: transparent;
@@ -32,6 +32,7 @@ h1{
 
 p, h1, div, h2{
   text-align: center;
+  text-rendering: optimizeLegibility;
 }
 
 *{
