UPDATE: Added and made pixelated git icon I like better

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -181,7 +181,7 @@ body {
 }
 
 .app__github-asteroid {
-  background: transparent url("../../vendor/icons/pixelated_github_cat.svg")
+  background: transparent url("../../vendor/icons/gradient__pixel.png")
     center no-repeat;
   width: 200px;
   height: 200px;
