FIX: Tweaked the non-tabbing function to where it selects everything within my page

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -15,7 +15,7 @@ $largeFont: 8em;
 
   @return unquote($returnVal);
 }
-//i think i found the issue,
+
 $shadows-tiny: renderStars(100, "#00FFCC");
 $shadows-medium: renderStars(400, "#A64DFF");
 $shadows-big: renderStars(200, "#3A68E8");
@@ -47,6 +47,8 @@ h2 {
 * {
   padding: 0px;
   margin: 0px;
+  box-sizing: border-box;
+  border: 1px solid red;
 }
 
 button:hover {
